Closed Bug 1004503 Opened 11 years ago Closed 11 years ago

Backout of failed attempt to fix relazification-related crash

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: till, Assigned: till)

Details

Attachments

(1 file)

I just remembered that we wanted to back out the don't-relazify-inlined-functions patch. We might want to uplift it to Aurora, and perhaps Beta, seeing how the patch is extremely simple and applies cleanly everywhere (I think).
Comment on attachment 8415903 [details] [diff] [review] Backout of failed attempt to fix relazification-related crash Review of attachment 8415903 [details] [diff] [review]: ----------------------------------------------------------------- Nice.
Attachment #8415903 - Flags: review?(jdemooij) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: