Bug 1004503 - Backout of failed attempt to fix relazification-related crash. r=jandem